Android app toevoeging
Let op de WindowsAndroidStudioPath : pas die aan naar het path op jouw toestel, als je deze repo zou overnemen.

--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,6 +2,7 @@
   "appId": "be.stevenop.ionic7testapp",
   "appName": "Ionic 7 test app",
   "webDir": "dist",
+  "WindowsAndroidStudioPath": "C:\\Users\\steven.ophalvens\\AppData\\Local\\Programs\\Android Studio\\bin\\studio64.exe",
   "server": {
     "androidScheme": "https"
   }
